# sc2-replay-parser

./: README.md  pyproject.toml  run_match.py
sc2_replay_parser/: __init__.py  __main__.py  parser.py
sc2_replay_parser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_zerg_rush_benchmark.py
tests/benchmarks/: test_zerg_rush.py
tests/fixtures/: 1_speedlingbot_vs_loser_bot.json
